@@ -1,3 +1,8 @@
+2005-10-07  Miklos Szeredi <miklos@szeredi.hu>
+
+	* highlevel-lib: init() and destroy() methods didn't have an
+	initialized fuse_context.  Bug reported by Tim Stoakes
+
 2005-10-04  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.4.0
